--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 server.port= 8084
+server.servlet.contextPath=/restApi
+spring.datasource.url = jdbc:mysql://localhost:3306/library?useSSL=false
+spring.datasource.username = root
+spring.datasource.password =
+spring.jpa.hibernate.ddl-auto = update
